@@ -1,3 +1,4 @@
+* Add limit_clause function on cursor
 * Fill the cursor cache at search
 * Allow rpc on today of ir.date
 * Use the module dependency order to apply views that inherits
